Fixes wrong positioning when using button.link in webkit browsers.

--- a/tool-ui/src/main/webapp/style/cms.less
+++ b/tool-ui/src/main/webapp/style/cms.less
@@ -697,6 +697,10 @@ figure,
     img {
         border-style: none;
     }
+
+    @media @media-webkit {
+        top: auto;
+    }
 }
 
 ol.links,
